--- a/templates/index.html
+++ b/templates/index.html
@@ -100,6 +100,7 @@
     </div>
     
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/chart.js') }}"></script>
     <script src="{{ url_for('static', filename='js/plinko.js') }}"></script>
     <script src="{{ url_for('static', filename='js/crash.js') }}"></script>
     <script src="{{ url_for('static', filename='js/dice.js') }}"></script>
